[gd_scene load_steps=19 format=3 uid="uid://bpoge22cts1hr"]

[ext_resource type="Script" path="res://scripts/collection2.gd" id="1_rn17u"]
[ext_resource type="Texture2D" uid="uid://dhmnc3hqx0cub" path="res://textures/bg setting.png" id="2_6usfq"]
[ext_resource type="Texture2D" uid="uid://c7pq50eib6nh7" path="res://textures/title.png" id="3_8wqjs"]
[ext_resource type="Texture2D" uid="uid://42q48u5nqqyv" path="res://textures/back.png" id="4_7rktl"]
[ext_resource type="Texture2D" uid="uid://0lf0jfmtjmu2" path="res://textures/back-hover.png" id="5_4y7i0"]
[ext_resource type="Texture2D" uid="uid://doelq63gfuloi" path="res://textures/Collection/Page 2/page2.png" id="6_02ya2"]
[ext_resource type="Texture2D" uid="uid://ci5nmh1rryux5" path="res://textures/ui stuff/collection/arrow-left.png" id="7_amxy7"]
[ext_resource type="Texture2D" uid="uid://dbo0smint0jpr" path="res://textures/ui stuff/collection/arrow-hover-left.png" id="8_671by"]
[ext_resource type="Texture2D" uid="uid://qo4rqda75n4q" path="res://textures/ui stuff/collection/arrow-right.png" id="9_xloui"]
[ext_resource type="Texture2D" uid="uid://bk5kyticdsndj" path="res://textures/ui stuff/collection/arrow-hover-right.png" id="10_1go5p"]
[ext_resource type="Texture2D" uid="uid://vl4irv4jxp1r" path="res://textures/Collection/Page 2/21-TheBunny.png" id="11_yavdp"]
[ext_resource type="Texture2D" uid="uid://et76ycijesjw" path="res://textures/Collection/Page 2/22-TheFriend.png" id="12_kby4k"]
[ext_resource type="Texture2D" uid="uid://bbvy8j7u8a16f" path="res://textures/Collection/Page 2/23-HappySubstance.png" id="13_jxc3u"]
[ext_resource type="Texture2D" uid="uid://ufhlfogotoco" path="res://textures/Collection/Page 2/24-Soda.png" id="14_ln4ve"]
[ext_resource type="Texture2D" uid="uid://cfptqxt8vmwhm" path="res://textures/Collection/card/21-TheBunny-card.png" id="15_bfkca"]
[ext_resource type="Texture2D" uid="uid://c3nh46k2ek2nc" path="res://textures/Collection/card/22-TheFriend-card.png" id="16_mc38i"]
[ext_resource type="Texture2D" uid="uid://b6jfuo4pi7qcf" path="res://textures/Collection/card/23-HappySubstance-card.png" id="17_pj8rj"]
[ext_resource type="Texture2D" uid="uid://d2klb6a82pogu" path="res://textures/Collection/card/24-Soda-card.png" id="18_bcp1j"]

[node name="Collection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rn17u")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6usfq")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_8wqjs")

[node name="Page" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_02ya2")

[node name="Left" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
texture_normal = ExtResource("7_amxy7")
texture_pressed = ExtResource("8_671by")
texture_hover = ExtResource("8_671by")

[node name="Right" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("9_xloui")
texture_pressed = ExtResource("10_1go5p")
texture_hover = ExtResource("10_1go5p")

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -87.0
offset_right = 200.0
grow_vertical = 0
texture_normal = ExtResource("4_7rktl")
texture_pressed = ExtResource("5_4y7i0")
texture_hover = ExtResource("5_4y7i0")

[node name="Bunny" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 280.0
offset_right = 321.0
offset_bottom = 498.0
texture_normal = ExtResource("11_yavdp")

[node name="Friend" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 280.0
offset_right = 560.0
offset_bottom = 498.0
texture_normal = ExtResource("12_kby4k")

[node name="Drugs" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 624.0
offset_top = 280.0
offset_right = 802.0
offset_bottom = 529.0
texture_normal = ExtResource("13_jxc3u")

[node name="Soda" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 280.0
offset_right = 1021.0
offset_bottom = 498.0
texture_normal = ExtResource("14_ln4ve")

[node name="BunnyCard" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="BunnyCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -276.0
offset_right = 189.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_bfkca")

[node name="FriendCard" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="FriendCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -276.0
offset_right = 189.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_mc38i")

[node name="DrugsCard" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="DrugsCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -276.0
offset_right = 189.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_pj8rj")

[node name="SodaCard" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="SodaCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -276.0
offset_right = 189.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_bcp1j")

[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Bunny" to="." method="_on_bunny_pressed"]
[connection signal="pressed" from="Friend" to="." method="_on_friend_pressed"]
[connection signal="pressed" from="Drugs" to="." method="_on_drugs_pressed"]
[connection signal="pressed" from="Soda" to="." method="_on_soda_pressed"]
[connection signal="pressed" from="BunnyCard" to="." method="_on_bunny_card_pressed"]
[connection signal="pressed" from="FriendCard" to="." method="_on_friend_card_pressed"]
[connection signal="pressed" from="DrugsCard" to="." method="_on_drugs_card_pressed"]
[connection signal="pressed" from="SodaCard" to="." method="_on_soda_card_pressed"]
